{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 14,
  "lineage": "77f90f09-bf40-b6ce-9c33-32bcb50e5847",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:security-group/sg-030fb0bf9d59e347b",
            "description": "sg for project vpc allow all traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "project_sg"
                ]
              }
            ],
            "id": "sg-030fb0bf9d59e347b",
            "name": "vpc_pr_sg",
            "tags": {
              "Name": "project_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d488737f087d8a1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216350790660:vpc/vpc-04d488737f087d8a1",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fdd5a1cba7026459",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-08a68ba4d7331bdd7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "pro-vpc"
                ]
              }
            ],
            "id": "vpc-04d488737f087d8a1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d02832f424090b4a",
            "owner_id": "216350790660",
            "tags": {
              "Name": "pro-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216350790660:loadbalancer/app/my-alb/b9a164f71e6c2743",
            "arn_suffix": "app/my-alb/b9a164f71e6c2743",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-572124064.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:216350790660:loadbalancer/app/my-alb/b9a164f71e6c2743",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-030fb0bf9d59e347b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0616a808a3101c35c"
              },
              {
                "subnet_id": "subnet-0e10f828d2f68af7f"
              }
            ],
            "subnets": [
              "subnet-0616a808a3101c35c",
              "subnet-0e10f828d2f68af7f"
            ],
            "vpc_id": "vpc-04d488737f087d8a1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_security_group.sg",
            "data.aws_subnets.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216350790660:listener/app/my-alb/b9a164f71e6c2743/c2bb247bd1c38a32",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:216350790660:targetgroup/my-tg/7e493636c12eb95a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:216350790660:listener/app/my-alb/b9a164f71e6c2743/c2bb247bd1c38a32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:216350790660:loadbalancer/app/my-alb/b9a164f71e6c2743",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my-lb",
            "aws_lb_target_group.tg",
            "data.aws_security_group.sg",
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:216350790660:targetgroup/my-tg/7e493636c12eb95a",
            "arn_suffix": "targetgroup/my-tg/7e493636c12eb95a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:216350790660:targetgroup/my-tg/7e493636c12eb95a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04d488737f087d8a1"
          },
          "dependencies": [
            "data.aws_vpc.vpc_id"
          ]
        }
      ]
    }
  ]
}